# GameEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Assets/Shaders/: Common.slang  PhysicsDebug.frag.glsl  PhysicsDebug.slang  PhysicsDebug.vert.glsl  Shader.frag  Shader.frag.glsl  Shader.frag.spv  Shader.vert  Shader.vert.glsl  Shader.vert.spv  TestShader.slang
Core/: CMakeLists.txt
Core/Core/: ECS.cpp  ECS.hpp  Input.cpp  Input.hpp  Math.hpp  Model.cpp  Model.hpp  Physics.cpp  Physics.hpp  Renderer.hpp  Resource.hpp  Time.cpp  Time.hpp  TypeNames.hpp  Window.cpp  Window.hpp
Core/Core/Physics/: DebugRenderer.cpp  DebugRenderer.hpp  Physics.cpp  Physics.hpp
Core/Core/Rendering/: RenderPassInterface.cpp  RenderPassInterface.hpp  Renderer.cpp  Renderer.hpp
Core/Implementation/OpenGL/: Renderer.cpp  Renderer.hpp
Core/Implementation/PC/: Renderer.cpp
Core/Implementation/SDL3/: Renderer.cpp  Renderer.hpp
Core/Platform/OpenGL/Rendering/: Renderer.cpp  Renderer.hpp
Core/Platform/PC/SDL3GPU/Rendering/: Renderer.cpp  Renderer.hpp
Core/Tools/: Files.cpp  Files.hpp  Logging.hpp  Resource.hpp  Types.hpp
Editor/: CMakeLists.txt
Editor/Editor/: Editor.cpp  ImGuiExtra.cpp  ImGuiPlatform.cpp  ImGuiPlatform.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp
Editor/Implementation/OpenGL/: ImGuiPlatform.cpp  ImGuiPlatform.hpp
Editor/Implementation/SDL3GPU/: ImGuiPlatform.cpp  ImGuiPlatform.hpp
Editor/src/: Editor.cpp  Editor.hpp  ImGuiExtra.hpp  ImGuiPlatform.cpp  ImGuiPlatform.hpp
